# auth-dock

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 035585ae752a_initialize_tables.py  884879f1db5e_initialize_table.py
src/app/: cli.py  main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py
src/app/auth/: enums.py  exception_handlers.py  models.py  routes.py
src/app/auth/constants/: auth_constants.py  token_constants.py
src/app/auth/dependencies/: __init__.py  auth_dependency.py  jwt_dependency.py  (+2 more)
src/app/common/: __init__.py  schemas.py  utils.py
src/app/core/: all_db_models.py  exception_handlers.py  lifespan.py  logging_conf.py
src/app/db/: __init__.py  database.py  dependencies.py  error_handler.py  exceptions.py  init.py
src/app/users/: constants.py  dependencies.py  dtos.py  exception_handlers.py  exceptions.py  models.py  repository.py  service.py
src/app/utils/: dto_utils.py  token_utils.py
src/auth_dock/: cli.py  main.py
src/auth_dock/auth/: dependencies.py  routes.py  services.py
src/auth_dock/core/: __init__.py  hashing.py  lifespan.py  ulid_types.py
src/auth_dock/db/: database.py  init.py
src/auth_dock/users/: __init__.py  constants.py  dependencies.py  dtos.py  enums.py  exceptions.py  models.py  repository.py  service.py
src/auth_dock/utils/: token_utils.py
tests/: conftest.py  dtos.py
tests/routers/auth/: __init__.py  test_auth_login.py  test_auth_logout.py  test_auth_register.py  test_login.py  test_logout.py  test_refresh_token.py  test_register.py
(+37 files in other folders)
